# rosa_robot

./: .gitignore  .gitmodules  README.md
gz_rosa_control/: README.md
rosa_audio/: README.md
rosa_audio/STT/voice_transcriber_pkg/: README.md  package.xml  setup.cfg  setup.py
rosa_audio/STT/voice_transcriber_pkg/launch/: rosa_voice.launch.py
rosa_audio/TTS/audio_common_msgs/action/: TTS.action
rosa_camera/config/: camera_config.yaml
rosa_description/: CMakeLists.txt  README.md  package.xml
rosa_description/config/: README.md  load_pre_mapped_params_online_async.yaml  nav2_params.yaml
rosa_description/description/rosa/: README.md  lidar_sensor.xacro  omni_wheel.xacro  realsense_d435.xacro
rosa_description/gz_slam_map/: README.md
rosa_description/launch/: README.md  rosa_nav_slam_launch.py  rosa_urdf_launch.py  slam_launch.py
rosa_description/old_stuff/: rosa_gazebo_launch.py
rosa_description/old_stuff/stl/: ROSA_BODY.stl
rosa_description/rviz/: README.md  slam_rviz_config.rviz
rosa_description/worlds/: pal_office.world
rosa_firmware/: package.xml
rosa_firmware/esp32_board/: README.md  platformio.ini
rosa_firmware/esp32_board/include/: rosa_esp32_defs.h  rosa_esp32_utils.h
rosa_firmware/esp32_board/src/: main.cpp  robo_claw.cpp  robot_drive.cpp  robot_drive.h  rosa_esp32_defs.cpp  rosa_gamepad.cpp  rosa_wifi.cpp
rosa_firmware/qt_interface/: CMakeLists.txt  RosaESP32Interface.pro  heartbeat.cpp  mainwindow.cpp  serialconfigdialog.cpp  serialconfigdialog.h
rosa_firmware/rosa_driver/: README.md  rosa_driver.cpp  rosa_driver.h  rosa_port.h
rosa_firmware/shared_src/: rosa_messages.h
rosa_launchers_pkg/: README.md  package.xml  setup.cfg  setup.py
rosa_launchers_pkg/launch/: rosa.launch.py  rosa_gazebo.launch.py  rosa_gazebo_navigation.launch.py  rosa_gazebo_slam.launch.py  rosa_navigation.launch.py  rosa_slam.launch.py
rosa_robot/rosa_audio/STT/voice_transcriber_pkg/voice_transcriber_pkg/: transcriber.py
rosa_robot/rosa_audio/TTS/audio_common/audio_common/: tts_node.py
rosa_robot/rosa_description/config/: mapper_params_online_async.yaml
rosa_robot/rosa_description/description/rosa/: rosa.xacro  rosa_body.xacro  rosa_gazebo.xacro
rosa_robot/rosa_description/description/rosa/meshes/: MECANUM_WHEEL_mhg.dae  ROSA_BODY_SIMPLE.stl
rosa_robot/rosa_description/gz_slam_map/: gaz_world.pgm  gaz_world.yaml
rosa_robot/rosa_description/launch/: navigation_launch.py  rosa_gazebo_launch.py  rosa_urdf_launch.py  slam_launch.py
rosa_robot/rosa_description/old_stuff/stl/: MECANUM_WHEEL_SIMPLE.stl
rosa_robot/rosa_description/rviz/: nav2_rviz_config.rviz
rosa_robot/rosa_firmware/: CMakeLists.txt
rosa_robot/rosa_firmware/esp32_board/src/: robo_claw.h  rosa_gamepad.h  rosa_wifi.h
rosa_robot/rosa_firmware/qt_interface/: .gitignore  README.md  heartbeat.h  leemeDeployQt.txt  mainwindow.h  mainwindow.ui  serialconfigdialog.ui
rosa_robot/rosa_firmware/rosa_driver/: CMakeLists.txt  driver_node.cpp  rosa_driver.cpp  rosa_driver.h  rosa_port.cpp
rosa_robot/rosa_firmware/shared_src/: spslib.h
rosa_robot/urg_node2/config/: params_serial.yaml
