<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosa_firmware</name>
  <version>0.0.0</version>
  <description>firmware, node and qt app monitor for ESP32 of ROSA robot</description>
  <maintainer email="miguel.hernando@upm.es">M. Hernando</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

<!--rosa_driver dependencies-->
<depend>serial_driver</depend>
<depend>std_msgs</depend>
<depend>geometry_msgs</depend>
<depend>rclcpp</depend>

 
 <!--rosa_qt_esp32 dependencies-->
<build_depend>qtbase5-dev</build_depend>
<build_depend>qt5-qmake</build_depend>
<!--  <build_depend>qt5serialport5-dev</build_depend>  -->

<exec_depend>libqt5-core</exec_depend>

 
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
